--- a/web/css/dss.css
+++ b/web/css/dss.css
@@ -1,6 +1,21 @@
 img.monsterrol
-{ width: 80%;
+{ width: 90%;
   display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+img.example
+{ width: 400px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+iframe.kb-artikel
+{ width: 90%;
+  display: block;
+  height: 700px;
   margin-left: auto;
   margin-right: auto;
 }
